parser.out
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
shift/reduce conflict in state 28 resolved as shift.
shift/reduce conflict in state 28 resolved as shift.
shift/reduce conflict in state 28 resolved as shift.
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
reduce/reduce conflict in state 28 resolved using rule 24 (intTerm -> intFactor .).
shift/reduce conflict in state 36 resolved as shift.
shift/reduce conflict in state 36 resolved as shift.
shift/reduce conflict in state 38 resolved as shift.
shift/reduce conflict in state 38 resolved as shift.
shift/reduce conflict in state 58 resolved as shift.
shift/reduce conflict in state 58 resolved as shift.
shift/reduce conflict in state 58 resolved as shift.
shift/reduce conflict in state 69 resolved as shift.
shift/reduce conflict in state 69 resolved as shift.
shift/reduce conflict in state 71 resolved as shift.
shift/reduce conflict in state 71 resolved as shift.
shift/reduce conflict in state 84 resolved as shift.
shift/reduce conflict in state 84 resolved as shift.


Unused terminals:

   EOF_SYMBOL

Grammar

Rule 1     program -> statementSequence
Rule 2     statementSequence -> statement partialStatementSequence
Rule 3     partialStatementSequence -> statement partialStatementSequence
Rule 4     partialStatementSequence -> empty
Rule 5     statement -> partialStatement DELIMITER_SYMBOL
Rule 6     partialStatement -> declaration
Rule 7     partialStatement -> assignment
Rule 8     partialStatement -> read
Rule 9     partialStatement -> write
Rule 10    partialStatement -> empty
Rule 11    read -> READ_SYMBOL IDENTIFIER
Rule 12    write -> WRITE_SYMBOL IDENTIFIER
Rule 13    declaration -> typeName IDENTIFIER partialDeclaration
Rule 14    partialDeclaration -> COMMA_SYMBOL IDENTIFIER partialDeclaration
Rule 15    partialDeclaration -> empty
Rule 16    typeName -> INT_TYPE_SYMBOL
Rule 17    assignment -> IDENTIFIER ASSIGN_SYMBOL intExpr
Rule 18    intExpr -> MINUS_SYMBOL intTerm partialIntExpr
Rule 19    intExpr -> intTerm partialIntExpr
Rule 20    partialIntExpr -> addOp intTerm partialIntExpr
Rule 21    partialIntExpr -> empty
Rule 22    addOp -> PLUS_SYMBOL
Rule 23    addOp -> MINUS_SYMBOL
Rule 24    intTerm -> intFactor
Rule 25    intTerm -> intFactor partialIntTerm
Rule 26    partialIntTerm -> multOp intFactor partialIntTerm
Rule 27    partialIntTerm -> empty
Rule 28    intFactor -> integer
Rule 29    intFactor -> IDENTIFIER
Rule 30    intFactor -> OPEN_PARAENTHESIS_SYMBOL intExpr CLOSE_PARAENTHESIS_SYMBOL
Rule 31    intFactor -> inlineIfStatement
Rule 32    multOp -> TIMES_SYMBOL
Rule 33    multOp -> DIVIDE_SYMBOL
Rule 34    multOp -> MODULO_SYMBOL
Rule 35    inlineIfStatement -> INLINE_IF_SYMBOL boolExpr INLINE_THEN_SYMBOL intExpr INLINE_ELSE_SYMBOL intExpr INLINE_FI_SYMBOL
Rule 36    partialBoolExpr -> boolOp intExpr relationOp intExpr partialBoolExpr
Rule 37    partialBoolExpr -> empty
Rule 38    boolExpr -> intExpr relationOp intExpr partialBoolExpr
Rule 39    boolOp -> AND_SYMBOL
Rule 40    boolOp -> OR_SYMBOL
Rule 41    relationOp -> LT_SYMBOL
Rule 42    relationOp -> LE_SYMBOL
Rule 43    relationOp -> EQ_SYMBOL
Rule 44    relationOp -> GE_SYMBOL
Rule 45    relationOp -> GT_SYMBOL
Rule 46    relationOp -> NE_SYMBOL
Rule 47    integer -> ANY_DIGIT digits
Rule 48    digits -> ANY_DIGIT digits
Rule 49    digits -> empty
Rule 50    empty -> <empty>

Terminals, with rules where they appear

AND_SYMBOL           : 39
ANY_DIGIT            : 47 48
ASSIGN_SYMBOL        : 17
CLOSE_PARAENTHESIS_SYMBOL : 30
COMMA_SYMBOL         : 14
DELIMITER_SYMBOL     : 5
DIVIDE_SYMBOL        : 33
EOF_SYMBOL           : 
EQ_SYMBOL            : 43
GE_SYMBOL            : 44
GT_SYMBOL            : 45
IDENTIFIER           : 11 12 13 14 17 29
INLINE_ELSE_SYMBOL   : 35
INLINE_FI_SYMBOL     : 35
INLINE_IF_SYMBOL     : 35
INLINE_THEN_SYMBOL   : 35
INT_TYPE_SYMBOL      : 16
LE_SYMBOL            : 42
LT_SYMBOL            : 41
MINUS_SYMBOL         : 18 23
MODULO_SYMBOL        : 34
NE_SYMBOL            : 46
OPEN_PARAENTHESIS_SYMBOL : 30
OR_SYMBOL            : 40
PLUS_SYMBOL          : 22
READ_SYMBOL          : 11
TIMES_SYMBOL         : 32
WRITE_SYMBOL         : 12
error                : 

Nonterminals, with rules where they appear

addOp                : 20
assignment           : 7
boolExpr             : 35
boolOp               : 36
declaration          : 6
digits               : 47 48
empty                : 4 10 15 21 27 37 49
inlineIfStatement    : 31
intExpr              : 17 30 35 35 36 36 38 38
intFactor            : 24 25 26
intTerm              : 18 19 20
integer              : 28
multOp               : 26
partialBoolExpr      : 36 38
partialDeclaration   : 13 14
partialIntExpr       : 18 19 20
partialIntTerm       : 25 26
partialStatement     : 5
partialStatementSequence : 2 3
program              : 0
read                 : 8
relationOp           : 36 38
statement            : 2 3
statementSequence    : 1
typeName             : 13
write                : 9


Parsing method: SLR


state 0

    (0) S' -> . program
    (1) program -> . statementSequence
    (2) statementSequence -> . statement partialStatementSequence
    (5) statement -> . partialStatement DELIMITER_SYMBOL
    (6) partialStatement -> . declaration
    (7) partialStatement -> . assignment
    (8) partialStatement -> . read
    (9) partialStatement -> . write
    (10) partialStatement -> . empty
    (13) declaration -> . typeName IDENTIFIER partialDeclaration
    (17) assignment -> . IDENTIFIER ASSIGN_SYMBOL intExpr
    (11) read -> . READ_SYMBOL IDENTIFIER
    (12) write -> . WRITE_SYMBOL IDENTIFIER
    (50) empty -> .
    (16) typeName -> . INT_TYPE_SYMBOL

    IDENTIFIER      shift and go to state 14
    READ_SYMBOL     shift and go to state 5
    WRITE_SYMBOL    shift and go to state 1
    $               reduce using rule 50 (empty -> .)
    DELIMITER_SYMBOL reduce using rule 50 (empty -> .)
    PLUS_SYMBOL     reduce using rule 50 (empty -> .)
    MINUS_SYMBOL    reduce using rule 50 (empty -> .)
    TIMES_SYMBOL    reduce using rule 50 (empty -> .)
    DIVIDE_SYMBOL   reduce using rule 50 (empty -> .)
    MODULO_SYMBOL   reduce using rule 50 (empty -> .)
    CLOSE_PARAENTHESIS_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_ELSE_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_FI_SYMBOL reduce using rule 50 (empty -> .)
    LT_SYMBOL       reduce using rule 50 (empty -> .)
    LE_SYMBOL       reduce using rule 50 (empty -> .)
    EQ_SYMBOL       reduce using rule 50 (empty -> .)
    GE_SYMBOL       reduce using rule 50 (empty -> .)
    GT_SYMBOL       reduce using rule 50 (empty -> .)
    NE_SYMBOL       reduce using rule 50 (empty -> .)
    AND_SYMBOL      reduce using rule 50 (empty -> .)
    OR_SYMBOL       reduce using rule 50 (empty -> .)
    INLINE_THEN_SYMBOL reduce using rule 50 (empty -> .)
    INT_TYPE_SYMBOL shift and go to state 9


    assignment      shift and go to state 2
    typeName        shift and go to state 3
    read            shift and go to state 4
    write           shift and go to state 7
    statementSequence shift and go to state 8
    program         shift and go to state 10
    empty           shift and go to state 6
    statement       shift and go to state 12
    declaration     shift and go to state 13
    partialStatement shift and go to state 11

state 1

    (12) write -> WRITE_SYMBOL . IDENTIFIER

    IDENTIFIER      shift and go to state 15



state 2

    (7) partialStatement -> assignment .

    DELIMITER_SYMBOL reduce using rule 7 (partialStatement -> assignment .)



state 3

    (13) declaration -> typeName . IDENTIFIER partialDeclaration

    IDENTIFIER      shift and go to state 16



state 4

    (8) partialStatement -> read .

    DELIMITER_SYMBOL reduce using rule 8 (partialStatement -> read .)



state 5

    (11) read -> READ_SYMBOL . IDENTIFIER

    IDENTIFIER      shift and go to state 17



state 6

    (10) partialStatement -> empty .

    DELIMITER_SYMBOL reduce using rule 10 (partialStatement -> empty .)



state 7

    (9) partialStatement -> write .

    DELIMITER_SYMBOL reduce using rule 9 (partialStatement -> write .)



state 8

    (1) program -> statementSequence .

    $               reduce using rule 1 (program -> statementSequence .)



state 9

    (16) typeName -> INT_TYPE_SYMBOL .

    IDENTIFIER      reduce using rule 16 (typeName -> INT_TYPE_SYMBOL .)



state 10

    (0) S' -> program .




state 11

    (5) statement -> partialStatement . DELIMITER_SYMBOL

    DELIMITER_SYMBOL shift and go to state 18



state 12

    (2) statementSequence -> statement . partialStatementSequence
    (3) partialStatementSequence -> . statement partialStatementSequence
    (4) partialStatementSequence -> . empty
    (5) statement -> . partialStatement DELIMITER_SYMBOL
    (50) empty -> .
    (6) partialStatement -> . declaration
    (7) partialStatement -> . assignment
    (8) partialStatement -> . read
    (9) partialStatement -> . write
    (10) partialStatement -> . empty
    (13) declaration -> . typeName IDENTIFIER partialDeclaration
    (17) assignment -> . IDENTIFIER ASSIGN_SYMBOL intExpr
    (11) read -> . READ_SYMBOL IDENTIFIER
    (12) write -> . WRITE_SYMBOL IDENTIFIER
    (16) typeName -> . INT_TYPE_SYMBOL

    $               reduce using rule 50 (empty -> .)
    DELIMITER_SYMBOL reduce using rule 50 (empty -> .)
    PLUS_SYMBOL     reduce using rule 50 (empty -> .)
    MINUS_SYMBOL    reduce using rule 50 (empty -> .)
    TIMES_SYMBOL    reduce using rule 50 (empty -> .)
    DIVIDE_SYMBOL   reduce using rule 50 (empty -> .)
    MODULO_SYMBOL   reduce using rule 50 (empty -> .)
    CLOSE_PARAENTHESIS_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_ELSE_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_FI_SYMBOL reduce using rule 50 (empty -> .)
    LT_SYMBOL       reduce using rule 50 (empty -> .)
    LE_SYMBOL       reduce using rule 50 (empty -> .)
    EQ_SYMBOL       reduce using rule 50 (empty -> .)
    GE_SYMBOL       reduce using rule 50 (empty -> .)
    GT_SYMBOL       reduce using rule 50 (empty -> .)
    NE_SYMBOL       reduce using rule 50 (empty -> .)
    AND_SYMBOL      reduce using rule 50 (empty -> .)
    OR_SYMBOL       reduce using rule 50 (empty -> .)
    INLINE_THEN_SYMBOL reduce using rule 50 (empty -> .)
    IDENTIFIER      shift and go to state 14
    READ_SYMBOL     shift and go to state 5
    WRITE_SYMBOL    shift and go to state 1
    INT_TYPE_SYMBOL shift and go to state 9


    read            shift and go to state 4
    partialStatementSequence shift and go to state 19
    declaration     shift and go to state 13
    write           shift and go to state 7
    typeName        shift and go to state 3
    empty           shift and go to state 20
    statement       shift and go to state 21
    assignment      shift and go to state 2
    partialStatement shift and go to state 11

state 13

    (6) partialStatement -> declaration .

    DELIMITER_SYMBOL reduce using rule 6 (partialStatement -> declaration .)



state 14

    (17) assignment -> IDENTIFIER . ASSIGN_SYMBOL intExpr

    ASSIGN_SYMBOL   shift and go to state 22



state 15

    (12) write -> WRITE_SYMBOL IDENTIFIER .

    DELIMITER_SYMBOL reduce using rule 12 (write -> WRITE_SYMBOL IDENTIFIER .)



state 16

    (13) declaration -> typeName IDENTIFIER . partialDeclaration
    (14) partialDeclaration -> . COMMA_SYMBOL IDENTIFIER partialDeclaration
    (15) partialDeclaration -> . empty
    (50) empty -> .

    COMMA_SYMBOL    shift and go to state 23
    $               reduce using rule 50 (empty -> .)
    DELIMITER_SYMBOL reduce using rule 50 (empty -> .)
    PLUS_SYMBOL     reduce using rule 50 (empty -> .)
    MINUS_SYMBOL    reduce using rule 50 (empty -> .)
    TIMES_SYMBOL    reduce using rule 50 (empty -> .)
    DIVIDE_SYMBOL   reduce using rule 50 (empty -> .)
    MODULO_SYMBOL   reduce using rule 50 (empty -> .)
    CLOSE_PARAENTHESIS_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_ELSE_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_FI_SYMBOL reduce using rule 50 (empty -> .)
    LT_SYMBOL       reduce using rule 50 (empty -> .)
    LE_SYMBOL       reduce using rule 50 (empty -> .)
    EQ_SYMBOL       reduce using rule 50 (empty -> .)
    GE_SYMBOL       reduce using rule 50 (empty -> .)
    GT_SYMBOL       reduce using rule 50 (empty -> .)
    NE_SYMBOL       reduce using rule 50 (empty -> .)
    AND_SYMBOL      reduce using rule 50 (empty -> .)
    OR_SYMBOL       reduce using rule 50 (empty -> .)
    INLINE_THEN_SYMBOL reduce using rule 50 (empty -> .)


    empty           shift and go to state 24
    partialDeclaration shift and go to state 25

state 17

    (11) read -> READ_SYMBOL IDENTIFIER .

    DELIMITER_SYMBOL reduce using rule 11 (read -> READ_SYMBOL IDENTIFIER .)



state 18

    (5) statement -> partialStatement DELIMITER_SYMBOL .

    IDENTIFIER      reduce using rule 5 (statement -> partialStatement DELIMITER_SYMBOL .)
    READ_SYMBOL     reduce using rule 5 (statement -> partialStatement DELIMITER_SYMBOL .)
    WRITE_SYMBOL    reduce using rule 5 (statement -> partialStatement DELIMITER_SYMBOL .)
    DELIMITER_SYMBOL reduce using rule 5 (statement -> partialStatement DELIMITER_SYMBOL .)
    INT_TYPE_SYMBOL reduce using rule 5 (statement -> partialStatement DELIMITER_SYMBOL .)
    $               reduce using rule 5 (statement -> partialStatement DELIMITER_SYMBOL .)



state 19

    (2) statementSequence -> statement partialStatementSequence .

    $               reduce using rule 2 (statementSequence -> statement partialStatementSequence .)



state 20

    (4) partialStatementSequence -> empty .
    (10) partialStatement -> empty .

    $               reduce using rule 4 (partialStatementSequence -> empty .)
    DELIMITER_SYMBOL reduce using rule 10 (partialStatement -> empty .)



state 21

    (3) partialStatementSequence -> statement . partialStatementSequence
    (3) partialStatementSequence -> . statement partialStatementSequence
    (4) partialStatementSequence -> . empty
    (5) statement -> . partialStatement DELIMITER_SYMBOL
    (50) empty -> .
    (6) partialStatement -> . declaration
    (7) partialStatement -> . assignment
    (8) partialStatement -> . read
    (9) partialStatement -> . write
    (10) partialStatement -> . empty
    (13) declaration -> . typeName IDENTIFIER partialDeclaration
    (17) assignment -> . IDENTIFIER ASSIGN_SYMBOL intExpr
    (11) read -> . READ_SYMBOL IDENTIFIER
    (12) write -> . WRITE_SYMBOL IDENTIFIER
    (16) typeName -> . INT_TYPE_SYMBOL

    $               reduce using rule 50 (empty -> .)
    DELIMITER_SYMBOL reduce using rule 50 (empty -> .)
    PLUS_SYMBOL     reduce using rule 50 (empty -> .)
    MINUS_SYMBOL    reduce using rule 50 (empty -> .)
    TIMES_SYMBOL    reduce using rule 50 (empty -> .)
    DIVIDE_SYMBOL   reduce using rule 50 (empty -> .)
    MODULO_SYMBOL   reduce using rule 50 (empty -> .)
    CLOSE_PARAENTHESIS_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_ELSE_SYMBOL reduce using rule 50 (empty -> .)
    INLINE_FI_SYMBOL reduce using rule 50 (empty -> .)
    LT_SYMBOL       reduce using rule 50 (empty -> .)
    LE_SYMBOL       reduce using rule 50 (empty -> .)
    EQ_SYMBOL       reduce using rule 50 (empty -> .)
    GE_SYMBOL       reduce using rule 50 (empty -> .)
    GT_SYMBOL       reduce using rule 50 (empty -> .)
    NE_SYMBOL       reduce using rule 50 (empty -> .)
    AND_SYMBOL      reduce using rule 50 (empty -> .)
    OR_SYMBOL       reduce using rule 50 (empty -> .)
    INLINE_THEN_SYMBOL reduce using rule 50 (empty -> .)
    IDENTIFIER      shift and go to state 14
    READ_SYMBOL     shift and go to state 5
    WRITE_SYMBOL    shift and go to state 1
    INT_TYPE_SYMBOL shift and go to state 9


    read            shift and go to state 4
    partialStatementSequence shift and go to state 26
    declaration     shift and go to state 13
    write           shift and go to state 7
    typeName        shift and go to state 3
    empty           shift and go to state 20
    statement       shift and go to state 21
    assignment      shift and go to state 2
    partialStatement shift and go to state 11

state 22

    (17) assignment -> IDENTIFIER ASSIGN_SYMBOL . intExpr
    (18) intExpr -> . MINUS_SYMBOL intTerm partialIntExpr
    (19) intExpr -> . intTerm partialIntExpr
    (24) intTerm -> . intFactor
    (25) intTerm -> . intFactor partialIntTerm
    (28) intFactor -> . integer
    (29) intFactor -> . IDENTIFIER
    (30) intFactor -> . OPEN_PARAENTHESIS_SYMBOL intExpr CLOSE_PARAENTHESIS_SYMBOL
    (31) intFactor -> . inlineIfStatement
    (47) integer -> . ANY_DIGIT digits
    (35) inlineIfStatement -> . INLINE_IF_SYMBOL boolExpr INLINE_THEN_SYMBOL intExpr INLINE_ELSE_SYMBOL intExpr INLINE_FI_SYMBOL

    MINUS_SYMBOL    shift and go to state 27
    IDENTIFIER      shift and go to state 35
    OPEN_PARAENTHESIS_SYMBOL shift and go to state 31
    ANY_DIGIT       shift and go to state 32
    INLINE_IF_SYMBOL shift and go to state 30


    intFactor       shift and go to state 28
    inlineIfStatement shift and go to state 29
    intExpr         shift and go to state 33
    intTerm         shift and go to state 36
    integer         shift and go to state 34

state 23

    (14) partialDeclaration -> COMMA_SYMBOL . IDENTIFIER partialDeclaration

    IDENTIFIER      shift and go to state 37



state 24

    (15) partialDeclaration -> empty .

    DELIMITER_SYMBOL reduce using rule 15 (partialDeclaration -> empty .)



state 25

    (13) declaration -> typeName IDENTIFIER partialDeclaration .

    DELIMITER_SYMBOL reduce using rule 13 (declaration -> typeName IDENTIFIER partialDeclaration .)



state 26

    (3) partialStatementSequence -> statement partialStatementSequence .

    $               reduce using rule 3 (partialStatementSequence -> statement partialStatementSequence .)



state 27

    (18) intExpr -> MINUS_SYMBOL . intTerm partialIntExpr
    (24) intTerm -> . intFactor
    (25) intTerm -> . intFactor partialIntTerm
    (28) intFactor -> . integer
    (29) intFactor -> . IDENTIFIER
    (30) intFactor -> . OPEN_PARAENTHESIS_SYMBOL intExpr CLOSE_PARAENTHESIS_SYMBOL
    (31) intFactor -> . inlineIfStatement
    (47) integer -> . ANY_DIGIT digits
    (35) inlineIfStatement -> . INLINE_IF_SYMBOL boolExpr INLINE_THEN_SYMBOL intExpr INLINE_ELSE_SYMBOL intExpr INLINE_FI_SYMBOL

    IDENTIFIER      shift and go to state 35
    OPEN_PARAENTHESIS_SYMBOL shift and go to state 31
    ANY_DIGIT       shift and go to state 32
    INLINE_IF_SYMBOL shift and go to state 30


    intFactor       shift and go to state 28
    inlineIfStatement shift and go to state 29
    intTerm         shift and go to state 38
    integer         shift and go to state 34

state 28

    (24) intTerm -> intFactor .
    (25) intTerm -> intFactor . partialIntTerm
    (26) partialIntTerm -> . multOp intFactor partialIntTerm
    (27) partialIntTerm -> . empty
    (32) multOp -> . TIMES_SYMBOL
    (33) multOp -> . DIVIDE_SYMBOL
    (34) multOp -> . MODULO_SYMBOL
    (50) empty -> .

  ! reduce/reduce conflict for DELIMITER_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for PLUS_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for MINUS_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! shift/reduce conflict for TIMES_SYMBOL resolved as shift.
  ! shift/reduce conflict for DIVIDE_SYMBOL resolved as shift.
  ! shift/reduce conflict for MODULO_SYMBOL resolved as shift.
  ! reduce/reduce conflict for CLOSE_PARAENTHESIS_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for INLINE_ELSE_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for INLINE_FI_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for LT_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for LE_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for EQ_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for GE_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for GT_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for NE_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for AND_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for OR_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
  ! reduce/reduce conflict for INLINE_THEN_SYMBOL resolved using rule 24 (intTerm -> intFactor .).
    PLUS_SYMBOL     reduce using rule 24 (intTerm -> intFactor .)
    MINUS_SYMBOL    reduce using rule 24 (intTerm -> intFactor .)
    DELIMITER_SYMBOL reduce using rule 24 (intTerm -> intFactor .)
    CLOSE_PARAENTHESIS_SYMBOL reduce using rule 24 (intTerm -> intFactor .)
    INLINE_ELSE_SYMBOL reduce using rule 24 (intTerm -> intFactor .)
    INLINE_FI_SYMBOL reduce using rule 24 (intTerm -> intFactor .)
    LT_SYMBOL       reduce using rule 24 (intTerm -> intFactor .)
    LE_SYMBOL       reduce using rule 24 (intTerm -> intFactor .)
    EQ_SYMBOL       reduce using rule 24 (intTerm -> intFactor .)
    GE_SYMBOL       reduce using rule 24 (intTerm -> intFactor .)
    GT_SYMBOL       reduce using rule 24 (intTerm -> intFactor .)
    NE_SYMBOL       reduce using rule 24 (intTerm -> intFactor .)
    AND_SYMBOL      reduce using rule 24 (intTerm -> intFactor .)
    OR_SYMBOL       reduce using rule 24 (intTerm -> intFactor .)
    INLINE_THEN_SYMBOL reduce using rule 24 (intTerm -> intFactor .)
    TIMES_SYMBOL    shift and go to state 40
    DIVIDE_SYMBOL   shift and go to state 43
    MODULO_SYMBOL   shift and go to state 41
    $               reduce using rule 50 (empty -> .)

  ! DELIMITER_SYMBOL [ reduce using rule 50 (empty -> .) ]
  ! PLUS_SYMBOL     [ reduce using rule 50 (empty -> .) ]
  ! MINUS_SYMBOL    [ reduce using rule 50 (empty -> .) ]
  ! TIMES_SYMBOL    [ reduce using rule 50 (empty -> .) ]
  ! DIVIDE_SYMBOL   [ reduce using rule 50 (empty -> .) ]
  ! MODULO_SYMBOL   [ reduce using rule 50 (empty -> .) ]
  ! CLOSE_PARAENTHESIS_SYMBOL [ reduce using rule 50 (empty -> .) ]
  ! INLINE_ELSE_SYMBOL [ reduce using rule 50 (empty -> .) ]
  ! INLINE_FI_SYMBOL [ reduce using rule 50 (empty -> .) ]
  ! LT_SYMBOL       [ reduce using rule 50 (empty -> .) ]
  ! LE_SYMBOL       [ reduce using rule 50 (empty -> .) ]
  ! EQ_SYMBOL       [ reduce using rule 50 (empty -> .) ]
  ! GE_SYMBOL       [ reduce using rule 50 (empty -> .) ]
  ! GT_SYMBOL       [ reduce using rule 50 (empty -> .) ]
  ! NE_SYMBOL       [ reduce using rule 50 (empty -> .) ]
  ! AND_SYMBOL      [ reduce using rule 50 (empty -> .) ]
  ! OR_SYMBOL       [ reduce using rule 50 (empty -> .) ]
  ! INLINE_THEN_SYMBOL [ reduce using rule 50 (empty -> .) ]

    empty           shift and go to state 44
    multOp          shift and go to state 42
    partialIntTerm  shift and go to state 39

state 29

    (31) intFactor -> inlineIfStatement .
